make secondary also mobile friendly

--- a/alt.fedoraproject.org/data/content/index.html
+++ b/alt.fedoraproject.org/data/content/index.html
@@ -220,7 +220,7 @@
     </div>
   </div>
 
-  <!-- Desktops -->
+  <!-- Secondary Arches -->
   <div class="jumbotron main-head top-space visible-lg hidden-xs hidden-sm hidden-md">
     <div class="container using">
       <div class="row">
@@ -282,12 +282,12 @@
     </div>
   </div>
 
-  <!-- Desktops mobile phones-->
+  <!-- Secondary Arches mobile phones-->
   <div class="jumbotron main-head top-space desktop visible-xs">
     <div class="container using">
       <div class="row">
         <div class="col-xs-12">
-        <h2>${_('Desktop Computing')}</h2>
+        <h2>${_('Secondary Architectures')}</h2>
         </div>
       </div>
       <div class="row">
@@ -298,68 +298,50 @@
       <div class="row">
         <div class="white">
           <div class="col-xs-3">
-          <img src="/static/images/workstation.png" />
+          <img src="/static/images/mips.png" />
           </div>
           <div class="col-xs-9">
-          <h3>${_('Fedora Workstation')}</h3>
-          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Workstation/armhfp/Images/Fedora-Workstation-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
+          <h3>${_('MIPS Architecture')}</h3>
+          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Workstation/armhfp/Images/Fedora-Workstation-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${Markup(_('View Images &gt;'))}</a></p>
           </div>
         </div>
         <div class="white">
           <div class="col-xs-3">
-          <img src="/static/images/kde.png" />
+          <img src="/static/images/ppc.png" />
           </div>
           <div class="col-xs-9">
-          <h3>${_('KDE Plasma Desktop')}</h3>
-          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Images/armhfp/Fedora-KDE-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
+          <h3>${_('PowerPC Architecture')}</h3>
+          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Workstation/armhfp/Images/Fedora-Workstation-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${Markup(_('View Images &gt;'))}</a></p>
           </div>
         </div>
         <div class="white">
           <div class="col-xs-3">
-          <img src="/static/images/xfce.png" />
+          <img src="/static/images/s390x.png" />
           </div>
           <div class="col-xs-9">
-          <h3>${_('Xfce Desktop')}</h3>
-          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Images/armhfp/Fedora-Xfce-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
+          <h3>${_('s390x Architecture')}</h3>
+          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Workstation/armhfp/Images/Fedora-Workstation-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${Markup(_('View Images &gt;'))}</a></p>
           </div>
         </div>
         <div class="white">
           <div class="col-xs-3">
-          <img src="/static/images/lxde.png" />
+          <img src="/static/images/aarch64.png" />
           </div>
           <div class="col-xs-9">
-          <h3>${_('LXDE Desktop')}</h3>
-          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Images/armhfp/Fedora-LXDE-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
-          </div>
-        </div>
-        <div class="white">
-          <div class="col-xs-3">
-          <img src="/static/images/mate.png" />
-          </div>
-          <div class="col-xs-9">
-          <h3>${_('MATE-Compiz Desktop')}</h3>
-          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Images/armhfp/Fedora-Mate-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
-          </div>
-        </div>
-        <div class="white">
-          <div class="col-xs-3">
-          <img src="/static/images/soas.png" />
-          </div>
-          <div class="col-xs-9">
-          <h3>${_('Sugar on a Stick')}</h3>
-          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Images/armhfp/Fedora-SoaS-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
+          <h3>${_('ARM AArch64 Architecture')}</h3>
+          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Workstation/armhfp/Images/Fedora-Workstation-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${Markup(_('View Images &gt;'))}</a></p>
           </div>
         </div>
       </div>
     </div>
   </div>
 
-  <!-- Desktops mobile tablets-->
+  <!-- Secondary Arches mobile tablets-->
   <div class="jumbotron main-head top-space desktop visible-sm-md hidden-xs hidden-lg">
     <div class="container using">
       <div class="row">
         <div class="col-xs-12">
-        <h2>${_('Desktop Computing')}</h2>
+        <h2>${_('Secondary Architectures')}</h2>
         </div>
       </div>
       <div class="row">
@@ -370,10 +352,10 @@
       <div class="row">
         <div class="white">
           <div class="col-sm-3">
-          <img src="/static/images/workstation.png" />
+          <img src="/static/images/mips.png" />
           </div>
           <div class="col-sm-5">
-          <h3>${_('Fedora Workstation')}</h3>
+          <h3>${_('MIPS Architecture')}</h3>
           </div>
           <div class="col-sm-4">
           <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Workstation/armhfp/Images/Fedora-Workstation-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
@@ -381,10 +363,10 @@
         </div>
         <div class="white">
           <div class="col-sm-3">
-          <img src="/static/images/kde.png" />
+          <img src="/static/images/ppc.png" />
           </div>
           <div class="col-sm-5">
-          <h3>${_('KDE Plasma Desktop')}</h3>
+          <h3>${_('PowerPC Architecture')}</h3>
           </div>
           <div class="col-sm-4">
           <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Images/armhfp/Fedora-KDE-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
@@ -392,46 +374,24 @@
         </div>
         <div class="white">
           <div class="col-sm-3">
-          <img src="/static/images/xfce.png" />
+          <img src="/static/images/s390x.png" />
           </div>
           <div class="col-sm-5">
-          <h3>${_('Xfce Desktop')}</h3>
+          <h3>${_('s390x Architecture')}</h3>
+          </div>
+          <div class="col-sm-4">
+          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Images/armhfp/Fedora-KDE-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
+          </div>
+        </div>
+        <div class="white">
+          <div class="col-sm-3">
+          <img src="/static/images/aarch64.png" />
+          </div>
+          <div class="col-sm-5">
+          <h3>${_('ARM AArch64 Architecture')}</h3>
           </div>
           <div class="col-sm-4">
           <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Images/armhfp/Fedora-Xfce-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
-          </div>
-        </div>
-        <div class="white">
-          <div class="col-sm-3">
-          <img src="/static/images/lxde.png" />
-          </div>
-          <div class="col-sm-5">
-          <h3>${_('LXDE Desktop')}</h3>
-          </div>
-          <div class="col-sm-4">
-          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Images/armhfp/Fedora-LXDE-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
-          </div>
-        </div>
-        <div class="white">
-          <div class="col-sm-3">
-          <img src="/static/images/mate.png" />
-          </div>
-          <div class="col-sm-5">
-          <h3>${_('MATE-Compiz Desktop')}</h3>
-          </div>
-          <div class="col-sm-4">
-          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Images/armhfp/Fedora-Mate-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
-          </div>
-        </div>
-        <div class="white">
-          <div class="col-sm-3">
-          <img src="/static/images/soas.png" />
-          </div>
-          <div class="col-sm-5">
-          <h3>${_('Sugar on a Stick')}</h3>
-          </div>
-          <div class="col-sm-4">
-          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Images/armhfp/Fedora-SoaS-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
           </div>
         </div>
       </div>
