add alt.fpo features and support

--- a/alt.fedoraproject.org/data/content/index.html
+++ b/alt.fedoraproject.org/data/content/index.html
@@ -692,9 +692,9 @@
     <div class="container">
       <div class="row">
 	    <div class="col-xs-12 caption">
-	      <h2 class="text-center">${_('What is ARM Technology?')}</h2>
-	      <p class="thin text-justify">${_('ARM microprocessors are the most widely-produced processor family in the world; they have historically been used in cell phones and embedded applications, and are increasingly used in tablet devices and low-power-consumption servers.')}</p>
-	      <p class="thin text-justify">${_('The Fedora ARM project is an initiative to bring Fedora to this processor family. The images provided here are versions of Fedora tailored for running in on ARM-based systems.')}</p>
+	      <h2 class="text-center">${_('Alternative Downloads')}</h2>
+	      <p class="thin text-justify">${_('These Fedora downloads are either special-purpose - for testing, for specific secondary architectures - or are more standard versions of Fedora in alternative formats such network installer format or formatted for bittorrent download.')}</p>
+	      <p class="thin text-justify">${_('This page is meant to serve as a single central resource for locating alternative versions of Fedora.')}</p>
         </div>
       </div>
     </div>
@@ -709,23 +709,9 @@
         </div>
       </div>
       <div class="row top-margin">
-        <div class="col-md-4 col-xs-12 text-center">
-          <h3><i class="fa fa-fw fa-lg header-icon fa-book"></i>${_('Documentation')}</h3>
-          <p>${Markup(_('Fedora ARM documentation and installation guides are available at the &lt;a href="%s"&gt;Fedora ARM wiki page&lt;/a&gt;.') % ('https://fedoraproject.org/wiki/Architectures/ARM'))}</p>
-        </div>
-        <div class="col-md-4 col-xs-12 text-center">
-          <h3><i class="fa fa-fw fa-lg header-icon fa-envelope-o"></i>${_('Email')}</h3>
-          <p>${Markup(_('Users and developers are also available on the mailing list at &lt;a href="%s"&gt;arm@lists.fedoraproject.org&lt;/a&gt;.') % ('https://admin.fedoraproject.org/mailman/listinfo/arm'))}</p>
-        </div>
-        <div class="col-md-4 col-xs-12 text-center">
-          <h3><i class="fa fa-fw fa-lg header-icon fa-comments"></i>${_('Chat')}</h3>
-          <p>${Markup(_('Users and developers are available in the &lt;a href="%s"&gt;#fedora-arm&lt;/a&gt; irc channel on &lt;strong&gt;irc.freenode.org&lt;/strong&gt; for real-time chat.') % ('http://webchat.freenode.net/?channels=fedora-arm'))}</p>
-        </div>
-      </div>
-      <div class="row top-margin">
         <div class="col-xs-12 text-center">
           <h4><i class="fa fa-fw header-icon fa-question-circle"></i>${_('General Help Using Fedora')}</h4>
-          <p>${Markup(_('Sometimes you may encounter an issue with this spin that you can get help with using general Fedora support resources. A list of resources is available at the &lt;a href="%s"&gt;Fedora &ldquo;Get Help&rdquo; page&lt;/a&gt;.') % ('https://fedoraproject.org/wiki/Communicating_and_getting_help'))}</p>
+          <h5><p>${Markup(_('Sometimes you may encounter an issue with this spin that you can get help with using general Fedora support resources. A list of resources is available at the &lt;a href="%s"&gt;Fedora &ldquo;Get Help&rdquo; page&lt;/a&gt;.') % ('https://fedoraproject.org/wiki/Communicating_and_getting_help'))}</p></h5>
         </div>
       </div>
     </div>
