flocktofedora: Amend recommendations for good measure
Re: https://lists.fedoraproject.org/archives/list/flock-planning@lists.fedoraproject.org/thread/LC563EFWFJQBC5UB24QBYAHZYT45GOCG/

--- a/flocktofedora.org/data/content/location/index.html
+++ b/flocktofedora.org/data/content/location/index.html
@@ -37,7 +37,7 @@
 		  <h3 class="panel-title"><i class="fa fa-info-circle"></i> ${_('Travel Advisory')}</h3>
 		</div>
 		<div class="panel-body">
-		  <p>${_('Note that in connection with Catholic Youth Day festivities, Poland will impose border controls at all of its national borders from July 4 to August 2. Visitors to Poland during this period should be prepared to show their passport and undergo stricter security screening. This change will mostly impact travelers coming to Flock via ground transport. EU citizens should be able to use their ID instead of passport.')}</p>
+		  <p>${_('Note that in connection with Catholic Youth Day festivities, Poland will impose border controls at all of its national borders from July 4 to August 2. Visitors to Poland during this period should be prepared to show their passport and undergo stricter security screening. EU citizens are recommended to have both their ID and passport.')}</p>
 		</div>
 	      </div>
 	    </div>
