--- a/flocktofedora.org/data/content/sponsorship/index.html
+++ b/flocktofedora.org/data/content/sponsorship/index.html
@@ -69,7 +69,7 @@
 	    <div class="panel-body">
 	      <div class="row">
 		<div class="col-xs-12 col-sm-2">
-		  <!-- can be adjusted for larger images -->
+		  <img src="../../../static/images/opensuse.png"/>
 		</div>
 	      </div>
 	    </div>
