--- a/getfedora.org/data/content/cloud/download/index.html
+++ b/getfedora.org/data/content/cloud/download/index.html
@@ -441,8 +441,8 @@
         <p>
           ${_('Base Images:')}
           <ul>
-            <li><p><a class="download-cloud-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Cloud/i386/Images/Fedora-Cloud-Base-${global_variables.release['curr_id']}-${global_variables.release['composedate']}.i386.qcow2">${_('32-bit qcow2 image for OpenStack')}</a></p></li>
-            <li><p><a class="download-cloud-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Cloud/i386/Images/Fedora-Cloud-Base-${global_variables.release['curr_id']}-${global_variables.release['composedate']}.i386.raw.xz">${_('32-bit raw image')}</a></p></li>
+            <li><p><a class="download-cloud-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Cloud/i386/images/Fedora-Cloud-Base-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.i386.qcow2">${_('32-bit qcow2 image for OpenStack')}</a></p></li>
+            <li><p><a class="download-cloud-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Cloud/i386/images/Fedora-Cloud-Base-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.i386.raw.xz">${_('32-bit raw image')}</a></p></li>
           </ul>
         </p>
           <div class="bottom-margin">
