no 32 bit cloud images

--- a/getfedora.org/data/content/cloud/download/index.html
+++ b/getfedora.org/data/content/cloud/download/index.html
@@ -437,7 +437,7 @@
   </div>
 
     <div class="col-md-3 col-xs-12 col-md-offset-1 top-margin">
-        <h3>${_('Other Downloads')}</h3>
+<!--        <h3>${_('Other Downloads')}</h3>
         <p>
           ${_('Base Images:')}
           <ul>
@@ -445,6 +445,7 @@
             <li><p><a class="download-cloud-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Cloud/i386/images/Fedora-Cloud-Base-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.i386.raw.xz">${_('32-bit raw image')}</a></p></li>
           </ul>
         </p>
+-->
           <div class="bottom-margin">
           <py:choose>
             <py:when test="global_variables.release['curr_state'] == 'Alpha'">
