--- a/arm.fedoraproject.org/data/content/verify.html
+++ b/arm.fedoraproject.org/data/content/verify.html
@@ -33,13 +33,13 @@
     </div>
     <div class="row bottom-margin">
         <div class="col-sm-4 col-xs-12">
-          <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Server-Images-armhfp-${global_variables.release['curr_id']}-CHECKSUM">${_('Validate Server!')}</a>
+          <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Server-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Validate Server!')}</a>
         </div>
         <div class="col-sm-4 col-xs-12">
-          <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Workstation-Images-armhfp-${global_variables.release['curr_id']}-CHECKSUM">${_('Validate Workstation!')}</a>
+          <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Workstation-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Validate Workstation!')}</a>
         </div>
         <div class="col-sm-4 col-xs-12">
-          <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Images-armhfp-${global_variables.release['curr_id']}-CHECKSUM">${_('Validate Desktop!')}</a>
+          <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Spins-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Validate Spins!')}</a>
         </div>
     </div>
 
